2003-02-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lily-guile.cc (ly:dimension?): add dimension as separate
	grob prop type. 

	* Documentation/user/refman.itely (Printing named chords): add
	chord name tweak doco.

	* input/template/gregorian-transcription.ly: new file.

2003-02-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/test/*: lots of cleanups/comment-outs/removals in chord
	examples
	
	* input/regression/*: lots of cleanups/comment-outs/removals in chord examples
	
	* scripts/lilypond-book.py (check_texidoc): add no-texidoc to options

	* lily/new-chord-name-engraver.cc (process_music): give original
	inversion pitch to chord name routine.

	* input/tutorial/os-score.ly: update to new markup

	* Documentation/user/appendices.itely: simply include
	chords-ignatzek. 

	* Documentation/user/refman.itely (Chords mode): add documentation
	for chord mode.

	* scm/chord-entry.scm (construct-chord): mark inversion as bass if
	not present in chord.
	(construct-chord): add inversion and bass support.

	* lily/chord.cc: junk contents.

2003-02-17  Heikki Junes <hjunes@cc.hut.fi>

	* Documentation/user/refman.itely:
	* Documentation/user/music-glossary.tely: fix. 

2003-02-16  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/chord-entry.scm (construct-chord): move chord construction
	to Scheme.

	* lily/parser.yy (new_chord): new setup for chord entry.

2003-02-16  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.words:
	* Documentation/user/music-glossary.tely: add ambitus.

2003-02-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/chords-ignatzek.scm (ignatzek-chord-names): robustness fix.

	* lily/include/*.hh: string() -> to_string()

	* scm/chords-ignatzek.scm: new file.

	* ly/chord-modifiers-init.ly (ignatzekExceptionMusic): define
	standard chord name exceptions.

	* scm/translator-property-description.scm (chordNameSeparator):
	add property.
	(majorSevenSymbol): add property

	* lily/translator-scheme.cc (ly:context-properties): new function