@@ -155,7 +155,8 @@ Hara_kiri_engraver::acknowledge_grob (Grob_info i)
 {
   Axis_group_engraver::acknowledge_grob (i);
   if (Rhythmic_head::has_interface (i.grob_)
-      || i.grob_->internal_has_interface (ly_symbol2scm ("lyric-syllable-interface")))
+      || i.grob_->internal_has_interface (ly_symbol2scm ("lyric-syllable-interface"))
+      )
     {
       Hara_kiri_group_spanner::add_interesting_item (staffline_, i.grob_);
     }
